2005-04-22  Ian Campbell <icampbell@arcom.com>

	* src/pcmb_serial.c: Enable FIFO.

2005-03-21  Bart Veer  <bartv@ecoscentric.com>

	* src/pcmb_misc.c, cdl/hal_i386_pcmb.cdl: add profiling support

2005-01-22  Ian Campbell  <icampbell@arcom.com>

	* include/pcmb_serial.h, 
	* src/pcmb_screen.c: define cyg_hal_plf_screen_position() which can 
	be used to get the current cursor location.

2003-09-20  Gary Thomas  <gary@mlbassoc.com>

	* include/pcmb_io.h: IDE init needs to return number of controllers 
	found.

2003-07-23  Nick Garnett  <nickg@balti.calivar.com>

	* include/pcmb_serial.h: Fixed bogus test on
	CYGSEM_HAL_I386_PCMB_SCREEN_SUPPORT defined to test
	CYGINT_HAL_I386_PCMB_SCREEN_SUPPORT > 0 instead.

2003-07-18  Nick Garnett  <nickg@balti.calivar.com>

	* cdl/hal_i386_pcmb.cdl:
        Changed values for CYGNUM_HAL_RTC_NUMERATOR,
        CYGNUM_HAL_RTC_DENOMINATOR and CYGNUM_HAL_RTC_PERIOD to
        "default_value" from "calculated". This makes it easier
        to change these values globally.
        
2002-08-14  Gary Thomas  <gthomas@ecoscentric.com>
2002-08-14  Drew Moseley <drew.moseley@intel.com>	

	* cdl/hal_i386_pcmb.cdl: 
	* include/pcmb_io.h: Increase PCI space to include all possible
	busses, slots, etc.  Required because defaults are often too small.	
2002-04-29  Gary Thomas  <gthomas@redhat.com>

	* src/pcmb_misc.c (hal_pcmb_init): Disable NMI at this point since
	no real handlers are in place to handle it.  This fixes a problem
	with manual reset code for IDE drivers which can cause NMI.

2002-04-26  Bart Veer  <bartv@redhat.com>

	* support/gfxmode.c:
	A utility to find out what graphics modes are available on any
	given PC.

	* include/pcmb.inc:
	Change the graphics mode during RedBoot startup, when configured
	to do so.	

	* cdl/hal_i386_pcmb.cdl:
	Add new configuration option for changing the graphics mode
	during RedBoot startup.

2001-12-06  Nick Garnett  <nickg@redhat.com>

	* include/pcmb_serial.h: 
	* src/pcmb_serial.c: